// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ComponentWrapper Renders the UI snapshot correctly 1`] = `
<div
  className="css-1xdhyk6"
  data-testid="ds-componentWrapper"
  id="id-componentWrapper"
>
  <h2
    className="chakra-heading css-1uhtpq1"
    data-testid="ds-heading"
    id="id-heading"
  >
    heading text
  </h2>
  <p
    className="chakra-text css-ap6r8h"
    data-testid="ds-text"
  >
    description text
  </p>
  <div>
    children elements
  </div>
  <div
    className="css-1xdhyk6"
    dangerouslySetInnerHTML={
      {
        "__html": "helper text",
      }
    }
    data-isinvalid={false}
    data-testid="ds-helperErrorText"
    id="id-helperErrorText"
  />
</div>
`;

exports[`ComponentWrapper Renders the UI snapshot correctly 2`] = `
<div
  className="css-1xdhyk6"
  data-testid="ds-componentWrapper"
  id="id-componentWrapper"
>
  <div>
    children elements
  </div>
  <div
    className="css-1xdhyk6"
    data-isinvalid={false}
    data-testid="ds-helperErrorText"
    id="id-helperErrorText"
  />
</div>
`;

exports[`ComponentWrapper Renders the UI snapshot correctly 3`] = `
<div
  className="css-1xdhyk6"
  data-testid="ds-componentWrapper"
  id="id-componentWrapper"
>
  <h2
    className="chakra-heading css-1uhtpq1"
    data-testid="ds-heading"
    id="id-heading"
  >
    heading text
  </h2>
  <p
    className="chakra-text css-ap6r8h"
    data-testid="ds-text"
  >
    description text
  </p>
  <div>
    children elements
  </div>
  <div
    className="css-1xdhyk6"
    dangerouslySetInnerHTML={
      {
        "__html": "invalid text",
      }
    }
    data-isinvalid={true}
    data-testid="ds-helperErrorText"
    id="id-helperErrorText"
  />
</div>
`;

exports[`ComponentWrapper Renders the UI snapshot correctly 4`] = `
<div
  className="css-kle7zy"
  data-testid="ds-componentWrapper"
  id="chakra-componentWrapper"
>
  <div>
    children elements
  </div>
  <div
    className="css-1xdhyk6"
    data-isinvalid={false}
    data-testid="ds-helperErrorText"
    id="chakra-helperErrorText"
  />
</div>
`;

exports[`ComponentWrapper Renders the UI snapshot correctly 5`] = `
<div
  className="css-1xdhyk6"
  data-testid="props"
  id="props-componentWrapper"
>
  <div>
    children elements
  </div>
  <div
    className="css-1xdhyk6"
    data-isinvalid={false}
    data-testid="ds-helperErrorText"
    id="props-helperErrorText"
  />
</div>
`;
